[package]
name = "alchemy-cocoa"
description = "Cocoa bindings for Alchemy, a cross-platform GUI framework written in Rust."
version = "0.1.0"
edition = "2018"
authors = ["Ryan McGrath <ryan@rymc.io>"]
license = "MPL-2.0+"
repository = "https://github.com/ryanmcgrath/alchemy"
categories = ["gui", "rendering::engine", "multimedia"]
keywords = ["gui", "cocoa", "macos", "appkit", "react"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
alchemy-lifecycle = { version = "0.1", path = "../lifecycle", features = ["cocoa"] }
alchemy-styles = { version = "0.1", path = "../styles" }
objc = "0.2.6"
objc_id = "0.1.1"
dispatch = "0.1.4"
cocoa = "0.18.4"
core-foundation = "0.6"
core-graphics = "0.17.1"
