[package]
name = "alchemy-lifecycle"
description = "A crate containing traits used in Alchemy, the Rust cross-platform GUI framework."
version = "0.1.0"
edition = "2018"
authors = ["Ryan McGrath <ryan@rymc.io>"]
license = "MPL-2.0+"
repository = "https://github.com/ryanmcgrath/alchemy"
categories = ["gui", "rendering::engine", "multimedia"]
keywords = ["gui", "css", "styles", "layout", "ui"]

[features]
default = []
cocoa = ["objc", "objc_id"]
gtkrs = ["gtk"]

[dependencies]
alchemy-styles = { version = "0.1", path = "../styles" }
gtk = { version = "0.6.0", features = ["v3_16"], optional = true }
objc = { version = "0.2.6", optional = true }
objc_id = { version = "0.1.1", optional = true }
serde_json = "1"
