[package]
name = "alchemy-macros"
description = "A crate containing macros used in Alchemy, the Rust cross-platform GUI framework."
version = "0.1.0"
edition = "2018"
authors = ["Ryan McGrath <ryan@rymc.io>"]
build = "src/build.rs"
license = "MPL-2.0+"
repository = "https://github.com/ryanmcgrath/alchemy"
categories = ["gui", "rendering::engine", "multimedia"]
keywords = ["gui", "css", "styles", "layout", "ui"]

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ansi_term = "0.11.0"
lalrpop-util = "0.16.1"
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
proc-macro-hack = "0.5.2"
quote = "0.6.10"
alchemy-styles = { version = "0.1", path = "../styles", features = ["parser", "tokenize"] }
syn = "0.15"

[build-dependencies]
lalrpop = "0.16.1"
version_check = "0.1.5"
