[package]
name = "alchemy-styles"
description = "Style parsing and hoisting for Alchemy, the Rust cross-platform GUI framework."
version = "0.1.0"
edition = "2018"
authors = ["Ryan McGrath <ryan@rymc.io>"]
license = "MPL-2.0+"
repository = "https://github.com/ryanmcgrath/alchemy"
categories = ["gui", "rendering::engine", "multimedia"]
keywords = ["gui", "css", "styles", "layout", "ui"]

[badges]
maintenance = { status = "actively-developed" }

[features]
tokenize = ["proc-macro2", "quote"]
parser = ["cssparser"]

[dependencies]
cssparser = { version = "0.25.5", optional = true }
lazy_static = "1.3"
proc-macro2 = { version = "0.4.24", optional = true }
quote = { version = "0.6.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
